--- a/pom.xml
+++ b/pom.xml
@@ -9,51 +9,55 @@
 	<version>3.1.2</version>
 	<relativePath/>
   </parent>
-  
   <groupId>br.com.senai</groupId>
   <artifactId>cardapios-mktplace-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>cardapios-mktplace-api</name>
-  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
 	<guava.version>32.1.2-jre</guava.version>	
+	<org-json.version>20200518</org-json.version>
   </properties>
-  
   <dependencies>
-	  
    	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
-	
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-validation</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
 	</dependency>	
-	
 	<dependency>
 	    <groupId>org.postgresql</groupId>
 	    <artifactId>postgresql</artifactId>	    
 	</dependency>
-	
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>		
 		<optional>true</optional>
 	</dependency>
-	
 	<dependency>
 		<groupId>com.google.guava</groupId>
 		<artifactId>guava</artifactId>
 		<version>${guava.version}</version>
 	</dependency>
-	
+	<dependency>
+		<groupId>com.fasterxml.jackson.datatype</groupId>
+		<artifactId>jackson-datatype-hibernate5-jakarta</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>${org-json.version}</version>
+	</dependency>
   </dependencies>
   
   <build>
 	<plugins>
-		
 		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
@@ -66,7 +70,7 @@
 				</excludes>
 			</configuration>
 		</plugin>
-		
 	</plugins>
   </build>
+  
 </project>
